--- a/index.html
+++ b/index.html
@@ -57,7 +57,26 @@
             </div>
         </div>
 
-
+        <div class="rating-container">
+            <h1 class="rating-title">What our users say</h1>
+            <div class="card">
+                <div class="star">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                </div>
+                <div class="card-description">
+                    <h1>Loved by Designers</h1>
+                    <p>This template instantly leveled up our <br> presence.” Studio Vertex</p>
+                </div>
+                <div class="card-bottom">
+                    <img src="Assets/avatar.png" alt="">
+                    <h3>Reviewer name <br><span class="date">Date</span></h3>
+                </div>
+            </div>
+        </div>
 
 
 
