--- a/index.html
+++ b/index.html
@@ -123,7 +123,18 @@
             <img src="Assets/wc-big.png" alt="">
         </div>
 
-
+        <div class="form-section">
+            <div class="form-title"><h1>Let’s Get in <br> Touch</h1></div>
+            <div class="form">
+                <label for="">Email</label><br>
+                <input class="input-box" type="email" name="" id="" placeholder="example@gmail.com"><br> <br>
+                <label for="">Name</label><br> 
+                <input class="input-box" type="text" name="" id="" placeholder="full name"><br> <br>
+                <label for="Message">Messege</label><br> 
+                <textarea class="area" name="" id="" cols="50" rows="10" placeholder="Write your messeage"></textarea> <br> 
+                <button class="touch-botton">Get in Touch</button>
+            </div>
+        </div>
 
     </main>
 
