--- a/index.html
+++ b/index.html
@@ -136,6 +136,19 @@
             </div>
         </div>
 
+        <footer>
+            <div class="footer">
+                <h1>LOGO</h1>
+                <p>Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+                <ul class="end">
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>How It Works</li>
+                    <li>Services</li>
+                </ul>
+            </div>
+        </footer>
+
     </main>
 
 </body>
