--- a/index.html
+++ b/index.html
@@ -124,14 +124,17 @@
         </div>
 
         <div class="form-section">
-            <div class="form-title"><h1>Let’s Get in <br> Touch</h1></div>
+            <div class="form-title">
+                <h1>Let’s Get in <br> Touch</h1>
+            </div>
             <div class="form">
                 <label for="">Email</label><br>
                 <input class="input-box" type="email" name="" id="" placeholder="example@gmail.com"><br> <br>
-                <label for="">Name</label><br> 
+                <label for="">Name</label><br>
                 <input class="input-box" type="text" name="" id="" placeholder="full name"><br> <br>
-                <label for="Message">Messege</label><br> 
-                <textarea class="area" name="" id="" cols="50" rows="10" placeholder="Write your messeage"></textarea> <br> 
+                <label for="Message">Messege</label><br>
+                <textarea class="area" name="" id="" cols="50" rows="10" placeholder="Write your messeage"></textarea>
+                <br>
                 <button class="touch-botton">Get in Touch</button>
             </div>
         </div>
@@ -139,12 +142,13 @@
         <footer>
             <div class="footer">
                 <h1>LOGO</h1>
-                <p>Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+                <p>Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how
+                    we can bring your vision to life.</p>
                 <ul class="end">
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>How It Works</li>
-                    <li>Services</li>
+                  <a target="_blank" href="https://en.wikipedia.org/wiki/Webflow"><li>Home</li></a>
+                   <a target="_blank" href="https://en.wikipedia.org/wiki/Webflow"> <li>About</li></a>
+                    <a target="_blank" href="https://merge.rocks/blog/how-does-webflow-work"><li>How It Works</li></a>
+                    <a target="_blank" href="https://en.wikipedia.org/wiki/Webflow"><li>Services</li></a>
                 </ul>
             </div>
         </footer>
