--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
         <div class="form-section">
             <div class="form-title">
-                <h1>Let’s Get in <br> Touch</h1>
+                <h1>Let's Get in <br> Touch</h1>
             </div>
             <div class="form">
                 <label for="">Email</label><br>
@@ -145,10 +145,18 @@
                 <p>Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how
                     we can bring your vision to life.</p>
                 <ul class="end">
-                  <a target="_blank" href="https://en.wikipedia.org/wiki/Webflow"><li>Home</li></a>
-                   <a target="_blank" href="https://en.wikipedia.org/wiki/Webflow"> <li>About</li></a>
-                    <a target="_blank" href="https://merge.rocks/blog/how-does-webflow-work"><li>How It Works</li></a>
-                    <a target="_blank" href="https://en.wikipedia.org/wiki/Webflow"><li>Services</li></a>
+                    <a target="_blank" href="https://en.wikipedia.org/wiki/Webflow">
+                        <li>Home</li>
+                    </a>
+                    <a target="_blank" href="https://en.wikipedia.org/wiki/Webflow">
+                        <li>About</li>
+                    </a>
+                    <a target="_blank" href="https://merge.rocks/blog/how-does-webflow-work">
+                        <li>How It Works</li>
+                    </a>
+                    <a target="_blank" href="https://en.wikipedia.org/wiki/Webflow">
+                        <li>Services</li>
+                    </a>
                 </ul>
             </div>
         </footer>
